argocd/home-assistant/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: home-assistant
  labels:
    pod-security.kubernetes.io/enforce: privileged
spec: {}
status: {}
