argocd/home-assistant/home-assistant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home-assistant
  name: home-assistant
spec:
  replicas: 1
  resources:
    requests:
      memory: 128Mi
      cpu: 50m
    limits:
      memory: 256Mi
      cpu: 250m
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      hostNetwork: true
      containers:
      - env:
        - name: TZ
          value: America/Toronto
        image: ghcr.io/home-assistant/home-assistant:stable
        name: home-assistant
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /config
          name: config-home-assistant
        # - mountPath: /run/dbus
        #   name: run-dbus-host-1
        #   readOnly: true
      volumes:
      - persistentVolumeClaim:
          claimName: config-home-assistant
        name: config-home-assistant
      # - hostPath:
      #     path: /run/dbus
      #     type: Directory
      #   name: run-dbus-host-1
