argocd/home-assistant/matter-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: home-assistant
  name: matter-server
  labels:
    app: matter-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matter-server
  template:
    metadata:
      labels:
        app: matter-server
    spec:
      restartPolicy: Always
      hostNetwork: true
      containers:
      - name: matter-server
        image: ghcr.io/home-assistant-libs/python-matter-server:stable
        args:
        - --storage-path
        - /data
        - --paa-root-cert-dir
        - /data/credentials
        volumeMounts:
        - mountPath: /data
          name: config-matter-server
      volumes:
      - name: config-matter-server
        persistentVolumeClaim:
          claimName: config-matter-server
