argocd/home-assistant/svc-home-assistant.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: vitorflix
  labels:
    app: home-assistant
  name: home-assistant
spec:
  ports:
  - name: 8123-8123
    port: 8123
    protocol: TCP
    targetPort: 8123 
  selector:
    app: home-assistant
  type: ClusterIP
