argocd/home-assistant/svc-matter-server.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: home-assistant
  labels:
    app: matter-server
  name: matter-server
spec:
  ports:
  - name: 5580-5580
    port: 5580
    protocol: TCP
    targetPort: 5580 
  selector:
    app: matter-server
  type: ClusterIP
